changed expected output since launching wildfly working now
Signed-off-by: Tina Pham <tina.pham@chainguard.dev>

--- a/wildfly.yaml
+++ b/wildfly.yaml
@@ -88,9 +88,16 @@ subpackages:
           cp -r dist/target/wildfly-${{package.version}}.Final/welcome-content/* ${{targets.contextdir}}/usr/share/wildfly/welcome-content/
 
 
-          cp dist/target/wildfly-${{package.version}}.Final/jboss-modules.jar ${{targets.contextdir}}/usr/share/wildfly/
+          mkdir -p ${{targets.contextdir}}/usr/share/wildfly/.galleon/
+          cp -r dist/target/wildfly-${{package.version}}.Final/.galleon/* ${{targets.contextdir}}/usr/share/wildfly/.galleon/
 
-          
+          mkdir -p ${{targets.contextdir}}/usr/share/wildfly/.installation/
+          cp -r dist/target/wildfly-${{package.version}}.Final/.installation/* ${{targets.contextdir}}/usr/share/wildfly/.installation/
+
+          mkdir -p ${{targets.contextdir}}/usr/share/wildfly/.well-known/
+          cp -r dist/target/wildfly-${{package.version}}.Final/.well-known/* ${{targets.contextdir}}/usr/share/wildfly/.well-known/
+
+          cp dist/target/wildfly-${{package.version}}.Final/jboss-modules.jar ${{targets.contextdir}}/usr/share/wildfly/
     test:
       environment:
         contents:
@@ -108,6 +115,9 @@ subpackages:
               "
             timeout: 60
             expected_output: |
+              Started server
+              Http management interface listening on http://127.0.0.1:9990/management
+              Admin console listening on http://127.0.0.1:9990
               JBoss Bootstrap Environment
               JBoss Modules version
               JBOSS_HOME
@@ -130,7 +140,7 @@ subpackages:
                 exit 1
               }
               echo "WildFly instance is up"
-    
+
   - range: openjdk-versions
     name: wildfly-compat-${{range.key}}
     description: "Compatibility package providing /opt/jboss/wildfly and /opt/java/openjdk symlinks"
@@ -144,7 +154,6 @@ subpackages:
 
           mkdir -p "${{targets.subpkgdir}}/opt/java"
           ln -sf /usr/lib/jvm/java-${{range.key}}-openjdk "${{targets.subpkgdir}}/opt/java/openjdk"
-
 
 update:
   enabled: true
