fix: typo for patch
Signed-off-by: Debasish Biswas <debasishbsws.dev@gmail.com>

--- a/sonarqube-10.yaml
+++ b/sonarqube-10.yaml
@@ -44,7 +44,7 @@ pipeline:
       tag: ${{package.version}}
       expected-commit: cfdf2faf6d306c576ea97861fe0f22a64a68f53c
 
-  - uses: patchs
+  - uses: patch
     with:
       patches: rem-cve-bump-netty-version.patch
 
