make it a bit clearer what's being tested in wolfi-base

--- a/wolfi-base.yaml
+++ b/wolfi-base.yaml
@@ -25,17 +25,23 @@ test:
   pipeline:
     - name: "Commands exist"
       runs: |
-        for x in apk sh ; do
-          which $x
-          type $x
-          command -v $x
+        for x in "which" "type" "command -v"; do
+          for y in apk sh ; do
+            if ! $x $y; then
+              echo "ERROR: $y missing"
+              exit 1
+            fi
+          done
         done
     - name: "Commands do not exist"
       runs: |
-        for x in curl git wget; do
-          which $x && echo "$x found but should not be installed" && exit 1
-          type $x && echo "$x found but should not be installed" && exit 1
-          command -v $x && echo "$x found but should not be installed" && exit 1
+        for x in "which" "type" "command -v"; do
+          for y in curl git wget ; do
+            if $x $y; then
+              echo "ERROR: $y found but should not be installed"
+              exit 1
+            fi
+          done
         done
 
 update:
