Adding a provides key to the spark compat

--- a/spark-3.5-scala-2.12.yaml
+++ b/spark-3.5-scala-2.12.yaml
@@ -165,6 +165,10 @@ subpackages:
 
   - name: ${{package.name}}-compat
     description: "Compatibility package to place binaries in the location expected by upstream image"
+    dependencies:
+      provider-priority: ${{range.value}}
+      provides:
+        - spark-compat
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/usr/bin
