added a few more autogenerated help/version sniff tests

--- a/hdf5.yaml
+++ b/hdf5.yaml
@@ -133,6 +133,7 @@ subpackages:
             h5unjam --help
             h5watch --version
             h5watch --help
+            h5fuse -h
 
   - range: libs
     name: 'hdf5-${{range.key}}'
