address suggested reviews
Signed-off-by: YashPimple <yashpimple22@gmail.com>

--- a/op-geth.yaml
+++ b/op-geth.yaml
@@ -56,8 +56,7 @@ subpackages:
         - runs: |
             clef --version
             clef --help
-        - name: "Run clef init"
-          runs: |
+        - runs: |
             apk add cmd:script
             script -q -c "clef init" /dev/null <<EOF
             ok
