mv cmd:script package to environment.contents
Signed-off-by: YashPimple <yashpimple22@gmail.com>

--- a/op-geth.yaml
+++ b/op-geth.yaml
@@ -50,12 +50,15 @@ subpackages:
             -X github.com/ethereum/go-ethereum/params.gitTag=v${{package.version}}
           output: clef
     test:
+      environment:
+        contents:
+          packages:
+            - cmd:script
       pipeline:
         - runs: |
             clef --version
             clef --help
         - runs: |
-            apk add cmd:script
             script -q -c "clef init" /dev/null <<EOF
             ok
             1234567890
