@kranurag7 helped refactor the package so we now build with respective jdk versions and do a copy all at once
Signed-off-by: Tina Pham <tina.pham@chainguard.dev>

--- a/wildfly.yaml
+++ b/wildfly.yaml
@@ -9,8 +9,8 @@ package:
 data:
   - name: openjdk-versions
     items:
-      21: "openjdk-21"
-      17: "openjdk-17"
+      21: "/usr/lib/jvm/java-21-openjdk"
+      17: "/usr/lib/jvm/java-17-openjdk"
 
 environment:
   contents:
@@ -30,86 +30,40 @@ pipeline:
       tag: ${{package.version}}.Final
       expected-commit: 1ffef94b7a7ababb767b0dd20f7c0d754388ad12
 
-  - runs: |
-      export JAVA_HOME="/usr/lib/jvm/java-17-openjdk"
-      ./mvnw install -DskipTests -Dskip.docs
-
 subpackages:
   - range: openjdk-versions
-    name: ${{package.name}}-${{range.value}}
+    name: ${{package.name}}-openjdk-${{range.key}}
     dependencies:
       runtime:
-        - ${{range.value}}-default-jvm
+        - openjdk-${{range.key}}-default-jvm
     pipeline:
       - runs: |
-          export JAVA_HOME="/usr/lib/jvm/java-${{range.key}}-openjdk"
+          export JAVA_HOME="${{range.value}}"
+          ./mvnw install -DskipTests -Dskip.docs
 
-
-          mkdir -p ${{targets.contextdir}}/usr/share/wildfly
-          cp dist/target/wildfly-${{package.version}}.Final/LICENSE.txt ${{targets.contextdir}}/usr/share/wildfly/
-          cp dist/target/wildfly-${{package.version}}.Final/README.txt ${{targets.contextdir}}/usr/share/wildfly/
-          cp dist/target/wildfly-${{package.version}}.Final/copyright.txt ${{targets.contextdir}}/usr/share/wildfly/
-
-
-          mkdir -p ${{targets.contextdir}}/usr/share/wildfly/appclient
-          cp -r dist/target/wildfly-${{package.version}}.Final/appclient/* ${{targets.contextdir}}/usr/share/wildfly/appclient/
-
-
-          mkdir -p ${{targets.contextdir}}/usr/share/wildfly/bin
-          cp -r dist/target/wildfly-${{package.version}}.Final/bin/* ${{targets.contextdir}}/usr/share/wildfly/bin/
-
-          mkdir -p ${{targets.contextdir}}/usr/share/wildfly/docs
-          cp -r dist/target/wildfly-${{package.version}}.Final/docs/* ${{targets.contextdir}}/usr/share/wildfly/docs/
-
-
-          mkdir -p ${{targets.contextdir}}/usr/share/wildfly/domain
-          cp -r dist/target/wildfly-${{package.version}}.Final/domain/configuration ${{targets.contextdir}}/usr/share/wildfly/domain/
-
-
+      - runs: |
           mkdir -p ${{targets.contextdir}}/usr/share/wildfly/domain/tmp
-
-
-          mkdir -p ${{targets.contextdir}}/usr/share/wildfly/standalone
-          cp -r dist/target/wildfly-${{package.version}}.Final/standalone/configuration ${{targets.contextdir}}/usr/share/wildfly/standalone/
-          cp -r dist/target/wildfly-${{package.version}}.Final/standalone/deployments ${{targets.contextdir}}/usr/share/wildfly/standalone/
-          cp -r dist/target/wildfly-${{package.version}}.Final/standalone/lib ${{targets.contextdir}}/usr/share/wildfly/standalone/
-
-
-          mkdir -p ${{targets.contextdir}}/usr/share/wildfly/standalone/log
-          mkdir -p ${{targets.contextdir}}/usr/share/wildfly/standalone/tmp
-          mkdir -p ${{targets.contextdir}}/usr/share/wildfly/standalone/data
-
-
-          mkdir -p ${{targets.contextdir}}/usr/share/wildfly/modules
-          cp -r dist/target/wildfly-${{package.version}}.Final/modules/* ${{targets.contextdir}}/usr/share/wildfly/modules/
-
-
-          mkdir -p ${{targets.contextdir}}/usr/share/wildfly/welcome-content
-          cp -r dist/target/wildfly-${{package.version}}.Final/welcome-content/* ${{targets.contextdir}}/usr/share/wildfly/welcome-content/
-
-
-          mkdir -p ${{targets.contextdir}}/usr/share/wildfly/.galleon/
-          cp -r dist/target/wildfly-${{package.version}}.Final/.galleon/* ${{targets.contextdir}}/usr/share/wildfly/.galleon/
-
-          mkdir -p ${{targets.contextdir}}/usr/share/wildfly/.installation/
-          cp -r dist/target/wildfly-${{package.version}}.Final/.installation/* ${{targets.contextdir}}/usr/share/wildfly/.installation/
-
-          mkdir -p ${{targets.contextdir}}/usr/share/wildfly/.well-known/
-          cp -r dist/target/wildfly-${{package.version}}.Final/.well-known/* ${{targets.contextdir}}/usr/share/wildfly/.well-known/
-
-          cp dist/target/wildfly-${{package.version}}.Final/jboss-modules.jar ${{targets.contextdir}}/usr/share/wildfly/
+          mkdir -p ${{targets.contextdir}}/usr/share/wildfly/domain/log
+          mkdir -p ${{targets.contextdir}}/usr/share/wildfly/domain/data
+          mkdir -p ${{targets.contextdir}}/usr/share/wildfly
+          cp -av dist/target/wildfly-${{package.version}}.Final/. ${{targets.contextdir}}/usr/share/wildfly/
     test:
       environment:
         contents:
           packages:
             - curl
+        environment:
+          JAVA_HOME: ${{range.value}}
       pipeline:
+        - name: version tests
+          runs: |
+            /usr/share/wildfly/bin/domain.sh --version | grep ${{package.version}}
+            /usr/share/wildfly/bin/jboss-cli.sh version
         - name: Test Wildfly with OpenJDK ${{range.key}}
           uses: test/daemon-check-output
           with:
             start: |
               sh -c "
-              export JAVA_HOME=/usr/lib/jvm/java-${{range.key}}-openjdk
               /usr/share/wildfly/bin/standalone.sh &
               sleep 10
               "
@@ -142,18 +96,22 @@ subpackages:
               echo "WildFly instance is up"
 
   - range: openjdk-versions
-    name: wildfly-compat-${{range.key}}
+    name: ${{package.name}}-openjdk-${{range.key}}-compat
     description: "Compatibility package providing /opt/jboss/wildfly and /opt/java/openjdk symlinks"
     dependencies:
       runtime:
         - wildfly-openjdk-${{range.key}}
     pipeline:
       - runs: |
-          mkdir -p "${{targets.subpkgdir}}/opt/jboss"
-          ln -sf /usr/share/wildfly "${{targets.subpkgdir}}/opt/jboss/wildfly"
-
-          mkdir -p "${{targets.subpkgdir}}/opt/java"
-          ln -sf /usr/lib/jvm/java-${{range.key}}-openjdk "${{targets.subpkgdir}}/opt/java/openjdk"
+          mkdir -p "${{targets.contextdir}}/opt/jboss"
+          ln -sf /usr/share/wildfly "${{targets.contextdir}}/opt/jboss/wildfly"
+          mkdir -p "${{targets.contextdir}}/opt/java"
+          ln -sf /usr/lib/jvm/java-${{range.key}}-openjdk "${{targets.contextdir}}/opt/java/openjdk"
+    test:
+      pipeline:
+        - runs: |
+            stat /opt/jboss/wildfly
+            stat /opt/java/openjdk
 
 update:
   enabled: true
@@ -162,3 +120,4 @@ update:
     strip-suffix: .Final
     tag-filter-contains: .Final
     use-tag: true
+    
