Do not fail and pass on the same file

--- a/pipelines/test/ldd-check.yaml
+++ b/pipelines/test/ldd-check.yaml
@@ -72,8 +72,11 @@ pipeline:
           echo "> $ ldd $f"
           sed 's,^,> ,' "$outf"
         fi
-        [ -z "$missing" ] || fail "$f: missing ${missing# }"
-        pass "$f"
+        if [ -n "$missing" ]; then
+            fail "$f: missing ${missing# }"
+        else
+            pass "$f"
+        fi
       }
 
       check_file() {
