--- a/snyk-cli.yaml
+++ b/snyk-cli.yaml
@@ -34,6 +34,10 @@ pipeline:
 
   - runs: git checkout -b release/wolfi # This is so the determine-release-channel.sh script decides the to use the correct channel and not create a -dev version
 
+  - uses: patch
+    with:
+      patches: dont-bump-version-in-build.patch
+
   - runs: make build
 
   - runs: |
