--- a/pipelines/test/emptypackage.yaml
+++ b/pipelines/test/emptypackage.yaml
@@ -6,7 +6,9 @@ pipeline:
       # Get our empty package name
       pkg=$(basename ${{targets.contextdir}})
       # Make sure this is an empty package
-      if [ $(apk info -L "$pkg" | wc -l) -le 3 ]; then
+      # Skip the "contains:" line and any empty lines
+      # We're only really expecting a single spdx.json file in an empty package
+      if [ $(apk info -L "$pkg" | grep -v " contains:$" | grep -v "^$" wc -l) -le 1 ] && (apk info -L "$pkg" | grep -q ".spdx.json$"); then
         echo "Package [$pkg] seems to be empty, as expected"
       else
         echo "Expected this package [$pkg] to be empty, but it isn't:"
