--- a/falco-libs.yaml
+++ b/falco-libs.yaml
@@ -1,7 +1,7 @@
 package:
   name: falco-libs
   version: "0.20.0"
-  epoch: 0
+  epoch: 1
   description: Foundational components necessary to build Falco
   copyright:
     - license: Apache-2.0
@@ -9,7 +9,7 @@ package:
 environment:
   contents:
     packages:
-      - abseil-cpp-dev
+      - abseil-cpp-dev~=20250127.0
       - autoconf
       - automake
       - bash
