--- a/grpc-1.69.yaml
+++ b/grpc-1.69.yaml
@@ -1,7 +1,7 @@
 package:
   name: grpc-1.69
   version: 1.69.0
-  epoch: 1
+  epoch: 2
   description: The C based gRPC
   copyright:
     - license: Apache-2.0 AND BSD-3-Clause AND MIT
@@ -33,7 +33,7 @@ data:
 environment:
   contents:
     packages:
-      - abseil-cpp-dev
+      - abseil-cpp-dev~=20250127.0
       - autoconf
       - automake
       - benchmark-dev
