--- a/mysql-connector-cpp.yaml
+++ b/mysql-connector-cpp.yaml
@@ -1,7 +1,7 @@
 package:
   name: mysql-connector-cpp
   version: "9.2.0"
-  epoch: 0
+  epoch: 1
   description: MySQL Connector/C++ is a MySQL database connector for C++
   copyright:
     - license: GPL-3.0-or-later
@@ -9,7 +9,7 @@ package:
 environment:
   contents:
     packages:
-      - abseil-cpp-dev
+      - abseil-cpp-dev~=20250127.0
       - autoconf
       - automake
       - boost-dev
