--- a/opentelemetry-cpp.yaml
+++ b/opentelemetry-cpp.yaml
@@ -1,7 +1,7 @@
 package:
   name: opentelemetry-cpp
   version: "1.19.0"
-  epoch: 1
+  epoch: 2
   description: The OpenTelemetry C++ Client
   copyright:
     - license: Apache-2.0
@@ -9,7 +9,7 @@ package:
 environment:
   contents:
     packages:
-      - abseil-cpp-dev
+      - abseil-cpp-dev~=20250127.0
       - benchmark-dev
       - busybox
       - c-ares-dev
