--- a/postgis-17.yaml
+++ b/postgis-17.yaml
@@ -1,7 +1,7 @@
 package:
   name: postgis-17
   version: "3.5.2"
-  epoch: 0
+  epoch: 1
   description: Geographic Information Systems Extensions to PostgreSQL
   copyright:
     - license: GPL-2.0-or-later
@@ -9,7 +9,7 @@ package:
 environment:
   contents:
     packages:
-      - abseil-cpp-dev
+      - abseil-cpp-dev~=20250127.0
       - autoconf
       - build-base
       - busybox
