--- a/protobuf.yaml
+++ b/protobuf.yaml
@@ -1,7 +1,7 @@
 package:
   name: protobuf
   version: 3.29.3 # On update, please check if -fdelete-null-pointer-checks is still required
-  epoch: 0
+  epoch: 1
   description: Library for extensible, efficient structure packing
   copyright:
     - license: BSD-3-Clause
@@ -17,7 +17,7 @@ var-transforms:
 environment:
   contents:
     packages:
-      - abseil-cpp-dev
+      - abseil-cpp-dev~=20250127.0
       - autoconf
       - automake
       - build-base
@@ -67,7 +67,7 @@ subpackages:
       - uses: split/dev
     dependencies:
       runtime:
-        - abseil-cpp-dev
+        - abseil-cpp-dev~=20250127.0
         - libprotoc
         - libprotobuf
         - libprotobuf-lite
