--- a/py3-onnx.yaml
+++ b/py3-onnx.yaml
@@ -1,7 +1,7 @@
 package:
   name: py3-onnx
   version: 1.17.0
-  epoch: 4
+  epoch: 5
   description: Open Neural Network Exchange
   copyright:
     - license: Apache-2.0
@@ -22,7 +22,7 @@ data:
 environment:
   contents:
     packages:
-      - abseil-cpp-dev
+      - abseil-cpp-dev~=20250127.0
       - bash
       - build-base
       - busybox
