--- a/re2.yaml
+++ b/re2.yaml
@@ -1,7 +1,7 @@
 package:
   name: re2
   version: "2024.02.01" # On update, please check if -fdelete-null-pointer-checks is still required
-  epoch: 3
+  epoch: 4
   description: Efficient, principled regular expression library
   copyright:
     - license: BSD-3-Clause
@@ -15,7 +15,7 @@ var-transforms:
 environment:
   contents:
     packages:
-      - abseil-cpp-dev
+      - abseil-cpp-dev~=20250127.0
       - autoconf
       - automake
       - build-base
@@ -53,7 +53,7 @@ subpackages:
     description: re2 dev
     dependencies:
       runtime:
-        - abseil-cpp-dev
+        - abseil-cpp-dev~=20250127.0
         - icu-dev
     test:
       pipeline:
