--- a/rethinkdb.yaml
+++ b/rethinkdb.yaml
@@ -1,7 +1,7 @@
 package:
   name: rethinkdb
   version: 2.4.4
-  epoch: 6
+  epoch: 7
   description: The open-source database for the realtime web.
   copyright:
     - license: Apache-2.0
@@ -10,7 +10,7 @@ environment:
   contents:
     packages:
       - abseil-cpp
-      - abseil-cpp-dev
+      - abseil-cpp-dev~=20250127.0
       - bash
       - boost-dev
       - build-base
