nri-discovery-kubernetes: add basic --help test

--- a/nri-discovery-kubernetes.yaml
+++ b/nri-discovery-kubernetes.yaml
@@ -38,3 +38,9 @@ update:
   github:
     identifier: newrelic/nri-discovery-kubernetes
     strip-prefix: v
+
+test:
+  pipeline:
+    - runs: |
+        # We need a k8s cluster to do any more testing than this
+        nri-discovery-kubernetes --help 2> /dev/null | grep "help requested"
