--- a/pipelines/test/emptypackage.yaml
+++ b/pipelines/test/emptypackage.yaml
@@ -8,7 +8,7 @@ pipeline:
       # Make sure this is an empty package
       # Skip the "contains:" line and any empty lines
       # We're only really expecting a single spdx.json file in an empty package
-      if [ $(apk info -L "$pkg" | grep -v " contains:$" | grep -v "^$" wc -l) -le 1 ] && (apk info -L "$pkg" | grep -q ".spdx.json$"); then
+      if [ $(apk info -L "$pkg" | grep -v " contains:$" | grep -v "^$" | wc -l) -le 1 ] && (apk info -L "$pkg" | grep -q ".spdx.json$"); then
         echo "Package [$pkg] seems to be empty, as expected"
       else
         echo "Expected this package [$pkg] to be empty, but it isn't:"
