--- a/apk-tools.yaml
+++ b/apk-tools.yaml
@@ -1,16 +1,19 @@
 package:
   name: apk-tools
   version: 2.14.4
-  epoch: 2
+  epoch: 3
   description: "apk-tools (Wolfi package manager)"
   copyright:
     - license: GPL-2.0-only
   dependencies:
     runtime:
       - ca-certificates-bundle
+      - wolfi-baselayout>=20230201-r17
 
 environment:
   contents:
+    build_repositories:
+      - https://apk.cgr.dev/wolfi-presubmit/b61fefc3152afab7885421fa1e68d5f29d5f9771
     packages:
       - build-base
       - busybox
@@ -37,7 +40,7 @@ pipeline:
       make LUA="lua5.3" V=1
 
   - runs: |
-      make LUA="lua5.3" V=1 DESTDIR="${{targets.destdir}}" install
+      make LUA="lua5.3" V=1 DESTDIR="${{targets.destdir}}" SBINDIR=/usr/bin LIBDIR=/usr/lib install
 
       install -d "${{targets.destdir}}"/var/lib/apk
       install -d "${{targets.destdir}}"/var/cache/misc
@@ -70,8 +73,8 @@ subpackages:
     description: "Lua module for libapk"
     pipeline:
       - runs: |
-          mkdir -p "${{targets.subpkgdir}}"/usr
-          mv "${{targets.destdir}}"/usr/lib "${{targets.subpkgdir}}"/usr/lib
+          mkdir -p "${{targets.subpkgdir}}"/usr/lib
+          mv "${{targets.destdir}}"/usr/lib/lua "${{targets.subpkgdir}}"/usr/lib
     test:
       pipeline:
         - uses: test/ldd-check
