--- a/busybox.yaml
+++ b/busybox.yaml
@@ -1,12 +1,14 @@
 package:
   name: busybox
   version: 1.37.0
-  epoch: 0
+  epoch: 1
   description: "swiss-army knife for embedded systems"
   copyright:
     - license: GPL-2.0-only
   dependencies:
     provider-priority: 10
+    runtime:
+      - wolfi-baselayout>=20230201-r17
   scriptlets:
     trigger:
       paths:
@@ -26,6 +28,8 @@ var-transforms:
 
 environment:
   contents:
+    build_repositories:
+      - https://apk.cgr.dev/wolfi-presubmit/ab2c3135bc7f641cdc53a783903a97501a6d4cd1
     packages:
       - build-base
       - busybox
@@ -63,7 +67,6 @@ pipeline:
       mkdir -p "${{targets.destdir}}"/tmp
       mkdir -p "${{targets.destdir}}"/var/cache/misc
       mkdir -p "${{targets.destdir}}"/bin
-      mkdir -p "${{targets.destdir}}"/sbin
       mkdir -p "${{targets.destdir}}"/etc
       mkdir -p "${{targets.destdir}}"/usr/share/man/man1
       chmod 1777 "${{targets.destdir}}"/tmp
@@ -72,6 +75,8 @@ pipeline:
 
       mkdir -p "${{targets.destdir}}"/etc/busybox-paths.d
       ./busybox --list-path > "${{targets.destdir}}"/etc/busybox-paths.d/busybox
+      # sbin-merge
+      sed 's|^sbin|usr/bin|' -i "${{targets.destdir}}"/etc/busybox-paths.d/busybox
 
 subpackages:
   - name: busybox-full
@@ -79,6 +84,8 @@ subpackages:
       provides:
         - busybox=${{package.full-version}}
       provider-priority: 5
+      runtime:
+        - wolfi-baselayout>=20230201-r17
     options:
       no-commands: true
     pipeline:
@@ -103,6 +110,8 @@ subpackages:
 
           mkdir -p "${{targets.subpkgdir}}"/etc/busybox-paths.d
           ./busybox --list-path > "${{targets.subpkgdir}}"/etc/busybox-paths.d/busybox-full
+          # sbin-merge
+          sed 's|^sbin|usr/bin|' -i "${{targets.subpkgdir}}"/etc/busybox-paths.d/busybox-full
     scriptlets:
       trigger:
         paths:
