--- a/utmps.yaml
+++ b/utmps.yaml
@@ -69,6 +69,9 @@ subpackages:
     pipeline:
       - uses: split/infodir
       - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
