--- a/util-linux.yaml
+++ b/util-linux.yaml
@@ -1,7 +1,7 @@
 package:
   name: util-linux
   version: "2.40.4"
-  epoch: 1
+  epoch: 2
   description: Random collection of Linux utilities
   copyright:
     - license: |-
@@ -9,6 +9,8 @@ package:
 
 environment:
   contents:
+    build_repositories:
+      - https://apk.cgr.dev/wolfi-presubmit/ab2c3135bc7f641cdc53a783903a97501a6d4cd1
     packages:
       - autoconf
       - automake
@@ -45,6 +47,7 @@ pipeline:
       opts: |
         --disable-silent-rules \
         --enable-newgrp \
+        --sbindir=/usr/bin \
         --disable-nls \
         --disable-tls \
         --disable-kill \
@@ -133,6 +136,9 @@ subpackages:
   - range: bins
     name: ${{range.key}}
     description: ${{range.value}}
+    dependencies:
+      runtime:
+        - wolfi-baselayout>=20230201-r17
     pipeline:
       - runs: |
           for i in usr/bin usr/sbin bin sbin; do
@@ -147,6 +153,7 @@ subpackages:
     dependencies:
       runtime:
         - runuser
+        - wolfi-baselayout>=20230201-r17
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/etc/pam.d
@@ -188,6 +195,9 @@ subpackages:
             newgrp --help
 
   - name: util-linux-misc
+    dependencies:
+      runtime:
+        - wolfi-baselayout>=20230201-r17
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}
