--- a/rpm2cpio.yaml
+++ b/rpm2cpio.yaml
@@ -34,8 +34,10 @@ test:
     contents:
       packages:
         - curl
+        - jq
   pipeline:
     - runs: |
         rpm2cpio
-        curl -L -o yq.rpm https://kojipkgs.fedoraproject.org//packages/yq/4.43.1/5.fc40/src/yq-4.43.1-5.fc40.src.rpm
-        rpm2cpio yq.rpm | grep -i fedora
+        export COSIGN_VERSION=$(curl -s --retry 5 "https://api.github.com/repos/sigstore/cosign/releases/latest" | jq -r ".tag_name" | sed 's/v//')
+        curl -fsSL --retry 5 -o cosign.rpm https://github.com/sigstore/cosign/releases/download/v${COSIGN_VERSION}/cosign-${COSIGN_VERSION}-1.${{build.arch}}.rpm
+        rpm2cpio cosign.rpm | cpio -idmv
