test: validate file capabilities set
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -47,8 +47,15 @@ update:
     use-tag: true
 
 test:
+  environment:
+    contents:
+      packages:
+        - libcap-utils
   pipeline:
     - runs: |
         set -euo pipefail
         atlantis version | grep -q "${{package.version}}"
         atlantis --help
+    - name: Test file capabilities
+      runs: |
+        getcap /usr/bin/atlantis | cut -d ' ' -f2 | grep -q -E '^cap_net_bind_service=ep$'
