--- a/emissary.yaml
+++ b/emissary.yaml
@@ -171,6 +171,7 @@ test:
         - kwokctl
         - kubernetes
         - etcd
+        - libcap-utils
   pipeline:
     - name: "Test entrypoint"
       uses: test/daemon-check-output
@@ -198,3 +199,6 @@ test:
           sleep 10
           curl -i http://127.0.0.1:8004/ambassador/v0/check_alive
           curl -i http://127.0.0.1:8004/ambassador/v0/check_ready
+    - name: Test file capabilities
+      runs: |
+        getcap /usr/bin/wrapper | cut -d ' ' -f2 | grep -q -E '^cap_net_bind_service=p$'
