--- a/haproxy-3.1.yaml
+++ b/haproxy-3.1.yaml
@@ -89,6 +89,13 @@ update:
     identifier: 1298
 
 test:
+  environment:
+    contents:
+      packages:
+        - libcap-utils
   pipeline:
     - runs: |
         haproxy -v
+    - name: Test file capabilities
+      runs: |
+        getcap /usr/sbin/haproxy | cut -d ' ' -f2 | grep -q -E '^cap_net_bind_service=eip$'
