--- a/ingress-nginx-controller-1.12.yaml
+++ b/ingress-nginx-controller-1.12.yaml
@@ -675,6 +675,7 @@ test:
     contents:
       packages:
         - ingress-nginx-controller-compat-${{vars.nginx-ingress-major-minor}}
+        - libcap-utils
   pipeline:
     - runs: |
         /usr/bin/nginx -v
@@ -715,3 +716,8 @@ test:
     - uses: test/ldd-check
       with:
         packages: ${{package.name}}
+    - name: Test file capabilities
+      runs: |
+        getcap /usr/bin/nginx-ingress-controller | cut -d ' ' -f2 | grep -q -E '^cap_net_bind_service=ep$'
+        getcap /usr/bin/nginx | cut -d ' ' -f2 | grep -q -E '^cap_net_bind_service=ep$'
+        getcap /usr/bin/dumb-init | cut -d ' ' -f2 | grep -q -E '^cap_net_bind_service=ep$'
