--- a/python-3.13.yaml
+++ b/python-3.13.yaml
@@ -215,9 +215,16 @@ subpackages:
           cp "${{targets.outdir}}/${{package.name}}-base/usr/bin/${{vars.python}}" "${{targets.contextdir}}/usr/bin/"
           setcap cap_net_bind_service=+eip "${{targets.contextdir}}/usr/bin/${{vars.python}}"
     test:
+      environment:
+        contents:
+          packages:
+            - libcap-utils
       pipeline:
         - runs: |
             stat /usr/bin/${{vars.python}}
+        - name: Test file capabilities
+          runs: |
+            getcap /usr/bin/${{vars.python}} | cut -d ' ' -f2 | grep -q -E '^cap_net_bind_service=eip$'
 
   - name: "${{package.name}}-tk"
     dependencies:
