--- a/spire-server.yaml
+++ b/spire-server.yaml
@@ -79,10 +79,17 @@ subpackages:
           install -Dm755 ./bin/oidc-discovery-provider "${{targets.subpkgdir}}/usr/bin/oidc-discovery-provider"
           setcap cap_net_bind_service=+ep "${{targets.subpkgdir}}/usr/bin/oidc-discovery-provider"
     test:
+      environment:
+        contents:
+          packages:
+            - libcap-utils
       pipeline:
         - runs: |
             oidc-discovery-provider --version
             oidc-discovery-provider --help
+        - name: Test file capabilities
+          runs: |
+            getcap /usr/bin/oidc-discovery-provider | cut -d ' ' -f2 | grep -q -E '^cap_net_bind_service=eip$'
 
 update:
   enabled: true
