--- a/apk-tools.yaml
+++ b/apk-tools.yaml
@@ -37,7 +37,7 @@ pipeline:
       make LUA="lua5.3" V=1
 
   - runs: |
-      make LUA="lua5.3" V=1 DESTDIR="${{targets.destdir}}" install
+      make LUA="lua5.3" V=1 DESTDIR="${{targets.destdir}}" install SBINDIR=/usr/bin LIBDIR=/usr/lib
 
       install -d "${{targets.destdir}}"/var/lib/apk
       install -d "${{targets.destdir}}"/var/cache/misc
@@ -73,8 +73,8 @@ subpackages:
     description: "Lua module for libapk"
     pipeline:
       - runs: |
-          mkdir -p "${{targets.subpkgdir}}"/usr
-          mv "${{targets.destdir}}"/usr/lib "${{targets.subpkgdir}}"/usr/lib
+          mkdir -p "${{targets.subpkgdir}}"/usr/lib
+          mv "${{targets.destdir}}"/usr/lib/lua "${{targets.subpkgdir}}"/usr/lib
     test:
       pipeline:
         - uses: test/ldd-check
