e2fsprogs - usrmerge-sbin

--- a/e2fsprogs.yaml
+++ b/e2fsprogs.yaml
@@ -101,17 +101,22 @@ subpackages:
             packages: e2fsprogs-libs
 
   - name: e2fsprogs-extra
+    description: Ext2/3/4 filesystem extra utilities
     pipeline:
       - runs: |
-          mkdir -p ${{targets.subpkgdir}}/usr
-          mv ${{targets.destdir}}/usr/* ${{targets.subpkgdir}}/usr/
+          destd="${{targets.subpkgdir}}"
+          srcd=${{targets.destdir}}
+          mkdir -p $destd/usr/lib $destd/usr/bin $destd/usr/bin
 
-          # move these back to main package
-          mkdir -p ${{targets.destdir}}/sbin
-          for i in e2fsck mke2fs mkfs.* fsck.*; do
-            mv ${{targets.subpkgdir}}/usr/sbin/$i ${{targets.destdir}}/sbin/
-          done
-    description: Ext2/3/4 filesystem extra utilities
+          cd "$srcd/usr/lib"
+          mv e2initrd_helper "$destd/usr/lib/"
+
+          cd "$srcd/usr/bin"
+          mv  lsattr chattr \
+              badblocks debugfs dumpe2fs e2freefrag e2image e2label \
+              e2mmpstatus e2scrub e2scrub_all e2undo e4crypt e4defrag \
+              filefrag logsave mklost+found resize2fs tune2fs \
+              "$destd/usr/bin/"
     test:
       pipeline:
         - runs: |
