cifs-utils - usrmerge-sbin

--- a/cifs-utils.yaml
+++ b/cifs-utils.yaml
@@ -32,7 +32,7 @@ pipeline:
 
   - runs: |
       mkdir -p ${{targets.destdir}}/sbin
-      make install DESTDIR="${{targets.destdir}}"
+      make install DESTDIR="${{targets.destdir}}" ROOTSBINDIR=/usr/bin
 
   - uses: strip
 
