cilium - usrmerge-sbin

--- a/cilium-1.17.yaml
+++ b/cilium-1.17.yaml
@@ -132,7 +132,7 @@ subpackages:
           # of iptables provided by the build environment.
           ./images/runtime/iptables-wrapper-installer.sh
           mkdir -p ${{targets.subpkgdir}}/sbin
-          mv /sbin/iptables-wrapper ${{targets.subpkgdir}}/sbin/iptables-wrapper
+          mv /sbin/iptables-wrapper ${{targets.subpkgdir}}/usr/bin/iptables-wrapper
       - uses: strip
 
   - name: ${{package.name}}-operator-generic
