cryptsetup - usrmerge-sbin

--- a/cryptsetup.yaml
+++ b/cryptsetup.yaml
@@ -46,7 +46,7 @@ pipeline:
         --host="$CHOST" \
         --prefix=/usr \
         --libdir=/usr/lib \
-        --sbindir=/sbin \
+        --sbindir=/usr/bin \
         --disable-static \
         --enable-libargon2 \
         --with-crypto_backend=openssl
