vector: enable rust-audit-info
Demonstrate automatic cargo auditable wrapper usage with rebuild of
vector image against presubmit repository of:
- https://github.com/wolfi-dev/os/pull/42571

--- a/vector.yaml
+++ b/vector.yaml
@@ -1,7 +1,7 @@
 package:
   name: vector
   version: "0.44.0"
-  epoch: 0
+  epoch: 1
   description: End-to-end observability data pipeline
   copyright:
     - license: MPL-2.0
@@ -11,9 +11,12 @@ package:
 
 environment:
   contents:
+    build_repositories:
+      - https://apk.cgr.dev/wolfi-presubmit/73ec5e07302eaef8723a1646cd815a26242a6540
     packages:
       - bash
       - build-base
+      - cargo-auditable
       - cyrus-sasl-dev
       - librdkafka
       - librdkafka-dev
