use install and more robust grep
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

Co-authored-by: Furkan Türkal <furkan.turkal@chainguard.dev>

--- a/trufflehog.yaml
+++ b/trufflehog.yaml
@@ -30,8 +30,7 @@ pipeline:
 
   - runs: |
       mkdir -p ${{targets.contextdir}}/etc
-      cp entrypoint.sh ${{targets.contextdir}}/etc/entrypoint.sh
-      chmod +x ${{targets.contextdir}}/etc/entrypoint.sh
+      install -Dm755 entrypoint.sh ${{targets.contextdir}}/etc/entrypoint.sh
 
 update:
   enabled: true
@@ -48,7 +47,7 @@ test:
         trufflehog --help
     - name: trufflehog scans
       runs: |
-        trufflehog git https://github.com/trufflesecurity/test_keys --results=verified,unknown | grep token
-        trufflehog docker --image trufflesecurity/secrets --results=verified,unknown | grep token
+        trufflehog git https://github.com/trufflesecurity/test_keys --results=verified,unknown | grep -E "arn:aws:iam|canarytokens"
+        trufflehog docker --image trufflesecurity/secrets --results=verified,unknown | grep -E "arn:aws:iam|canarytokens"
         echo "demo-password-1234" > secret.txt
         trufflehog filesystem secret.txt
