--- a/op-geth.yaml
+++ b/op-geth.yaml
@@ -152,23 +152,31 @@ subpackages:
 
 test:
   pipeline:
-    - name: version and help tests for geth
-      runs: |
-        geth version | grep -qi "${{package.version}}-stable"
-        geth --help
-    - runs: |
-        geth --dev --nodiscover --maxpeers 0 --http --http.addr "127.0.0.1" --http.port "8545" --http.api "eth,net,web3" --allow-insecure-unlock &
-        GETH_PID=$!
-        sleep 5  # Wait for Geth to initialize
+    - name: Test standalone as background process and check output
+      uses: test/daemon-check-output
+      with:
+        start: geth --dev --nodiscover --maxpeers 0 --http --http.addr "127.0.0.1" --http.port "8545" --http.api "eth,net,web3" --allow-insecure-unlock
+        expected_output: |
+          Maximum peer count
+          HTTP server started
+          Writing custom genesis block
+          Using developer account
+        post: |
+          sleep 5
 
-        if ps | grep -q "[g]eth"; then
-          echo "Geth started successfully"
-        else
-          echo "Failed to start Geth"
-          exit 1
-        fi
+          # Check if the process is running
+          if ps aux | grep -q "[g]eth"; then
+            echo "Geth started successfully"
+          else
+            echo "Failed to start Geth"
+            exit 1
+          fi
 
-        kill $GETH_PID
+          curl --fail --silent --show-error -X POST --data '{"jsonrpc":"2.0","method":"web3_clientVersion","params":[],"id":1}' -H "Content-Type: application/json" http://127.0.0.1:8545 | grep -q "Geth"
+
+          echo "Geth RPC is responsive"
+
+          pkill -f geth
 
 update:
   enabled: true
