--- a/op-geth.yaml
+++ b/op-geth.yaml
@@ -152,27 +152,21 @@ subpackages:
 
 test:
   pipeline:
-    - name: Test standalone as background process and check output
-      uses: test/daemon-check-output
-      with:
-        start: geth --dev --nodiscover --maxpeers 0 --http --http.addr "127.0.0.1" --http.port "8545" --http.api "eth,net,web3" --allow-insecure-unlock
-        expected_output: |
-          Maximum peer count
-          HTTP server started
-          Writing custom genesis block
-          Using developer account
-        post: |
-          sleep 5
-
-          # Check if the process is running
-          if ps aux | grep -q "[g]eth"; then
-            echo "Geth started successfully"
-          else
-            echo "Failed to start Geth"
-            exit 1
-          fi
-
-          pkill -f geth
+    - name: version and help tests for geth
+      runs: |
+        geth version | grep -qi "${{package.version}}-stable"
+        geth --help
+    - runs: |
+        geth --dev --nodiscover --maxpeers 0 --http --http.addr "127.0.0.1" --http.port "8545" --http.api "eth,net,web3" --allow-insecure-unlock &
+        GETH_PID=$!
+        sleep 5  # Wait for Geth to initialize
+        if ps | grep -q "[g]eth"; then
+          echo "Geth started successfully"
+        else
+          echo "Failed to start Geth"
+          exit 1
+        fi
+        kill $GETH_PID
 
 update:
   enabled: true
