--- a/dhclient.yaml
+++ b/dhclient.yaml
@@ -46,15 +46,16 @@ pipeline:
         --with-libbind=no \
         --enable-dhcpv4o6 \
         --enable-paranoia \
-        --enable-log-pid
+        --enable-log-pid  \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
   - uses: autoconf/make-install
 
   - runs: |
-      mkdir -p "${{targets.destdir}}"/sbin
-      install -m755 dhclient-script "${{targets.destdir}}"/sbin
+      mkdir -p "${{targets.destdir}}"/usr/bin
+      install -m755 dhclient-script "${{targets.destdir}}"/usr/bin
       mkdir -p "${{targets.destdir}}"/var/lib/dhcp/
       touch "${{targets.destdir}}"/var/lib/dhcp/dhclient.leases
 
