--- a/efs-utils.yaml
+++ b/efs-utils.yaml
@@ -58,7 +58,6 @@ pipeline:
       mkdir -p ${BUILD_ROOT}/etc/amazon/efs
       mkdir -p ${BUILD_ROOT}/etc/init/
       mkdir -p ${BUILD_ROOT}/etc/systemd/system
-      mkdir -p ${BUILD_ROOT}/sbin
       mkdir -p ${BUILD_ROOT}/usr/bin
       mkdir -p ${BUILD_ROOT}/var/log/amazon/efs
       mkdir -p ${BUILD_ROOT}/usr/share/man/man8
@@ -68,14 +67,14 @@ pipeline:
       install -p -m 644 dist/amazon-efs-mount-watchdog.service ${BUILD_ROOT}/etc/systemd/system
       install -p -m 444 dist/efs-utils.crt ${BUILD_ROOT}/etc/amazon/efs
       install -p -m 644 dist/efs-utils.conf ${BUILD_ROOT}/etc/amazon/efs
-      install -p -m 755 src/mount_efs/__init__.py ${BUILD_ROOT}/sbin/mount.efs
+      install -p -m 755 src/mount_efs/__init__.py ${BUILD_ROOT}/usr/bin/mount.efs
       install -p -m 755 src/proxy/target/release/efs-proxy ${BUILD_ROOT}/usr/bin/efs-proxy
       install -p -m 755 src/watchdog/__init__.py ${BUILD_ROOT}/usr/bin/amazon-efs-mount-watchdog
 
   - name: edit shbang for python
     runs: |
       d=${{targets.destdir}}
-      for p in $d/usr/bin/amazon-efs-mount-watchdog $d/sbin/mount.efs ; do
+      for p in $d/usr/bin/amazon-efs-mount-watchdog $d/usr/bin/mount.efs ; do
          sed -i -e '1s,^#!.*python3$,#!/usr/bin/python${{vars.py-version}},' "$p"
       done
 
