fuse2 - usrmerge-sbin

--- a/fuse2.yaml
+++ b/fuse2.yaml
@@ -37,7 +37,8 @@ pipeline:
       ./makeconf.sh
 
   - runs: |
-      UDEV_RULES_PATH=/lib/udev/rules.d ./configure \
+      UDEV_RULES_PATH=/lib/udev/rules.d \
+      MOUNT_FUSE_PATH=/usr/bin ./configure \
         --prefix=/usr \
         --enable-static \
         --enable-shared \
