--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -292,7 +292,8 @@ subpackages:
             with:
               repository: https://github.com/DataDog/integrations-core
               branch: ${{vars.datadog-major-minor-x}} # 7.62.x
-              expected-commit: 3263b1cb567f6dc6ef72289a613d7856bcc680d7 # needs to be updated with each new release
+              expected-commit: 59ae7b79fdbb5c14abacf26e1536c338b9ebfb7f # needs to be updated with each new release
+              depth: -1
           - uses: patch
             with:
               patches: /home/build/int-core-datadog_checks_dev-pyproject-toml.patch /home/build/int-core-mysql-hatch-toml.patch /home/build/int-core-singlestore-hatch-toml.patch /home/build/int-core-agent_requirements-in.patch /home/build/int-core-snowflake-pyproject-toml.patch
