kubernetes-1.32: fix path in capabilities test

--- a/kubernetes-1.32.yaml
+++ b/kubernetes-1.32.yaml
@@ -279,4 +279,4 @@ test:
         kubelet --help
     - name: Test file capabilities
       runs: |
-        getcap /bin/kube-apiserver | cut -d ' ' -f2 | grep -q -E '^cap_net_bind_service=ep$'
+        getcap /usr/bin/kube-apiserver | cut -d ' ' -f2 | grep -q -E '^cap_net_bind_service=ep$'
