fluent-plugin-label-router: depend on fluentd<1.18, matching Gemfile.lock

--- a/fluent-plugin-label-router.yaml
+++ b/fluent-plugin-label-router.yaml
@@ -10,7 +10,7 @@ package:
     provides:
       - ruby3.2-fluent-plugin-label-router=${{package.full-version}}
     runtime:
-      - ruby3.2-fluentd
+      - ruby3.2-fluentd<1.18
       - ruby3.2-prometheus-client
 
 environment:
