iptables - usrmerge-sbin

--- a/iptables.yaml
+++ b/iptables.yaml
@@ -42,7 +42,7 @@ pipeline:
         --host="$CHOST" \
         --prefix=/usr \
         --mandir=/usr/share/man \
-        --sbindir=/sbin \
+        --sbindir=/usr/bin \
         --sysconfdir=/etc \
         --without-kernel \
         --enable-devel \
