fix(kubernetes-1.32): preserve api-server file capability
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/kubernetes-1.32.yaml
+++ b/kubernetes-1.32.yaml
@@ -65,15 +65,15 @@ pipeline:
       make WHAT="$WHAT"
 
   - runs: |
-      # We apply cap_net_bind_service so that kube-apiserver can be run as
-      # non-root and still listen on port less than 1024
-      setcap cap_net_bind_service=+ep _output/bin/kube-apiserver
-
-  - runs: |
       mkdir -p "${{targets.destdir}}"/usr/bin/
       install -m755 _output/bin/* ${{targets.destdir}}/usr/bin/
 
       mkdir -p "${{targets.destdir}}"/etc/kubernetes
+
+  - runs: |
+      # We apply cap_net_bind_service so that kube-apiserver can be run as
+      # non-root and still listen on port less than 1024
+      setcap cap_net_bind_service=+ep ${{targets.destdir}}/usr/bin/kube-apiserver
 
 subpackages:
   - name: kubectl-${{vars.kubernetes-version}}
