--- a/spark-3.5-scala-2.12.yaml
+++ b/spark-3.5-scala-2.12.yaml
@@ -167,7 +167,7 @@ subpackages:
     description: "Compatibility package to place binaries in the location expected by upstream image"
     dependencies:
       provides:
-        - spark-compat
+        - spark-compat=${{package.full-version}}
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/usr/bin
