--- a/spark-3.5-scala-2.13.yaml
+++ b/spark-3.5-scala-2.13.yaml
@@ -78,7 +78,7 @@ subpackages:
     description: "Compatibility package to place binaries in the location expected by upstream image"
     dependencies:
       provides:
-        - spark-compat
+        - spark-compat=${{package.full-version}}
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/usr/bin
