lua-resty-redis: add basic require test

--- a/lua-resty-redis.yaml
+++ b/lua-resty-redis.yaml
@@ -31,3 +31,24 @@ update:
     identifier: openresty/lua-resty-redis
     strip-prefix: v
     use-tag: true
+
+test:
+  environment:
+    contents:
+      packages:
+        - luajit
+  pipeline:
+    - runs: |
+        # Set the correct LUA_PATH and LUA_CPATH
+        export LUA_PATH="/usr/lib/lua/?.lua;;"
+        export LUA_CPATH="/usr/lib/lua/?.so;;"
+
+        cat << EOF > test.lua
+        # Create a basic ngx mock to test that our installed package is require'able
+        ngx = {}
+        ngx["socket"] = {}
+
+        local redis = require "resty.redis"
+        EOF
+
+        luajit test.lua
