--- a/tez.yaml
+++ b/tez.yaml
@@ -28,10 +28,11 @@ pipeline:
   - uses: maven/pombump
     with:
       patch-file: patches.yaml
+      properties-file: pombump-properties.yaml
 
   - runs: |
       mkdir -p ${{targets.contextdir}}/usr/share/java/tez
-      mvn package -Dhadoop.version=3.4.0 -DskipTests -Dmaven.javadoc.skip=true -Pnoui
+      mvn package -Dhadoop.version=3.4.1 -DskipTests -Dmaven.javadoc.skip=true -Pnoui
       tar -xf tez-dist/target/tez-${{package.version}}.tar.gz -C ${{targets.contextdir}}/usr/share/java/tez
 
 test:
