--- a/spire-server.yaml
+++ b/spire-server.yaml
@@ -1,7 +1,7 @@
 package:
   name: spire-server
   version: 1.11.1
-  epoch: 3
+  epoch: 4
   description: The SPIFFE Runtime Environment (SPIRE) server
   copyright:
     - license: Apache-2.0
@@ -89,7 +89,7 @@ subpackages:
             oidc-discovery-provider --help
         - name: Test file capabilities
           runs: |
-            getcap /usr/bin/oidc-discovery-provider | cut -d ' ' -f2 | grep -q -E '^cap_net_bind_service=eip$'
+            getcap /usr/bin/oidc-discovery-provider | cut -d ' ' -f2 | grep -q -E '^cap_net_bind_service=ep$'
 
 update:
   enabled: true
