iproute2 - usrmerge-sbin

--- a/iproute2.yaml
+++ b/iproute2.yaml
@@ -45,6 +45,8 @@ pipeline:
         CCOPTS="-D_GNU_SOURCE $CFLAGS" LIBDIR=/lib
 
   - uses: autoconf/make-install
+    with:
+      opts: SBINDIR=/usr/bin
 
 subpackages:
   - name: iproute2-doc
