--- a/hydra.yaml
+++ b/hydra.yaml
@@ -42,6 +42,19 @@ update:
     strip-prefix: v
 
 test:
+  environment:
+    contents:
+      packages:
+        - curl
   pipeline:
     - runs: |
+        set -ex
         /usr/local/bin/hydra version
+        /usr/local/bin/hydra help
+        export DSN=memory
+        /usr/local/bin/hydra migrate sql up -e --yes
+        /usr/local/bin/hydra serve all --dev &
+        sleep 5
+        curl -s http://localhost:4444/health/alive | grep '"status":"ok"'
+
+
