iptables - usrmerge-sbin

--- a/iptables.yaml
+++ b/iptables.yaml
@@ -77,9 +77,10 @@ subpackages:
       no-provides: true
     pipeline:
       - runs: |
-          cp -r ${{targets.destdir}} ${{targets.contextdir}}
-          setcap cap_net_raw,cap_net_admin+eip ${{targets.contextdir}}/sbin/xtables-legacy-multi
-          setcap cap_net_raw,cap_net_admin+eip ${{targets.contextdir}}/sbin/xtables-nft-multi
+          mkdir -p ${{targets.contextdir}}/
+          cp -r ${{targets.destdir}}/* ${{targets.contextdir}}/
+          setcap cap_net_raw,cap_net_admin+eip ${{targets.contextdir}}/usr/bin/xtables-legacy-multi
+          setcap cap_net_raw,cap_net_admin+eip ${{targets.contextdir}}/usr/bin/xtables-nft-multi
     test:
       environment:
         contents:
@@ -91,8 +92,8 @@ subpackages:
             packages: $(basename ${{targets.contextdir}})
         - name: Test file capabilities
           runs: |
-            getcap /sbin/xtables-legacy-multi | cut -d ' ' -f2 | grep -q -E '^cap_net_raw,cap_net_admin+eip$'
-            getcap /sbin/xtables-nft-multi | cut -d ' ' -f2 | grep -q -E '^cap_net_raw,cap_net_admin+eip$'
+            getcap /usr/bin/xtables-legacy-multi | cut -d ' ' -f2 | grep -q -E '^cap_net_raw,cap_net_admin+eip$'
+            getcap /usr/bin/xtables-nft-multi | cut -d ' ' -f2 | grep -q -E '^cap_net_raw,cap_net_admin+eip$'
 
   - name: iptables-doc
     description: iptables documentation
@@ -116,11 +117,11 @@ subpackages:
           mkdir -p ${{targets.subpkgdir}}
           cd "${{targets.subpkgdir}}"
 
-          mkdir -p sbin \
+          mkdir -p usr/bin \
             var/lib/ip6tables \
             usr/lib/xtables
 
-          mv "${{targets.destdir}}"/sbin/ip6* sbin/
+          mv "${{targets.destdir}}"/usr/bin/ip6* usr/bin/
           mv "${{targets.destdir}}"/usr/lib/xtables/libip6* usr/lib/xtables/
     test:
       pipeline:
