keyutils - usrmerge-sbin

--- a/keyutils.yaml
+++ b/keyutils.yaml
@@ -40,6 +40,7 @@ pipeline:
         NO_ARLIB=1 \
         LIBDIR=/usr/lib \
         USRLIBDIR=/usr/lib \
+        SBINDIR=/usr/bin \
         install
 
       # Work around a bug in melange with absolute symlinks:
