Building with different versions of openjdk

--- a/spark-3.5.yaml
+++ b/spark-3.5.yaml
@@ -250,7 +250,13 @@ subpackages:
           ln -s /usr/lib/spark/sbin ${{targets.subpkgdir}}/opt/bitnami/spark/sbin
           ln -s /usr/lib/spark/yarn ${{targets.subpkgdir}}/opt/bitnami/spark/yarn
 
-  - name: ${{package.name}}-scala-2.13
+
+  - range: openjdk-versions
+    name: ${{package.name}}-scala-2.13-openjdk-${{range.key}}
+    dependencies:
+      runtime:
+        - openjdk-${{range.key}}-default-jvm
+
     pipeline:
       - runs: |
           git stash
@@ -259,7 +265,8 @@ subpackages:
         with:
           patches: make-2.13-distribution.patch internal-access.patch mvn.patch
       - runs: |
-          export JAVA_HOME="/usr/lib/jvm/java-17-openjdk"
+          export JAVA_HOME="/usr/lib/jvm/${{range.value}}"
+          export PATH=$PATH:$JAVA_HOME/bin
           ./dev/change-scala-version.sh 2.13
       - uses: maven/pombump
         with:
@@ -273,20 +280,20 @@ subpackages:
       environment:
         contents:
           packages:
-            - openjdk-17-default-jvm
+            - openjdk-${{range.key}}-default-jvm
             - bash
             - python-3.11
             - pyspark-scala-2.13
         environment:
           LANG: en_US.UTF-8
           SCALA_VERSION: 2.13
-          JAVA_HOME: /usr/lib/jvm/java-17-openjdk
+          JAVA_HOME: /usr/lib/jvm/java-${{range.key}}-openjdk
           SPARK_LOCAL_IP: 127.0.0.1
           SPARK_LOCAL_HOSTNAME: localhost
           SPARK_HOME: /usr/lib/spark
           SPARK_USER: test
       pipeline:
-        - name: Test ${{package.name}} with OpenJDK 17
+        - name: Test ${{package.name}} with different versions of OpenJDK 
           pipeline:
             - name: Test if the Scala versions are correct
               runs: ls /usr/lib/spark/jars/scala-* | grep -q $SCALA_VERSION
