lvm2 - usrmerge-sbin

--- a/lvm2.yaml
+++ b/lvm2.yaml
@@ -42,7 +42,7 @@ pipeline:
         --prefix=/usr \
         --sysconfdir=/etc \
         --libdir=/lib \
-        --sbindir=/sbin \
+        --sbindir=/usr/bin \
         --localstatedir=/var \
         --enable-static_link \
         --disable-nls \
@@ -51,17 +51,17 @@ pipeline:
         --with-thin=internal \
         --enable-dmeventd \
         --enable-cmdlib \
-        --with-thin-check=/sbin/thin_check \
+        --with-thin-check=/usr/bin/thin_check \
         --disable-thin_check_needs_check \
-        --with-thin-dump=/sbin/thin_dump \
-        --with-thin-repair=/sbin/thin_repair \
-        --with-thin-restore=/sbin/thin_restore \
-        --with-cache-check=/sbin/cache_check \
+        --with-thin-dump=/usr/bin/thin_dump \
+        --with-thin-repair=/usr/bin/thin_repair \
+        --with-thin-restore=/usr/bin/thin_restore \
+        --with-cache-check=/usr/bin/cache_check \
         --disable-cache_check_needs_check \
-        --with-cache-dump=/sbin/cache_dump \
-        --with-cache-repair=/sbin/cache_repair \
-        --with-cache-restore=/sbin/cache_restore \
-        --with-dmeventd-path=/sbin/dmeventd \
+        --with-cache-dump=/usr/bin/cache_dump \
+        --with-cache-repair=/usr/bin/cache_repair \
+        --with-cache-restore=/usr/bin/cache_restore \
+        --with-dmeventd-path=/usr/bin/dmeventd \
         --without-systemd-run \
         --enable-udev_rules \
         CLDFLAGS="$LDFLAGS"
@@ -126,8 +126,8 @@ subpackages:
   - name: device-mapper
     pipeline:
       - runs: |
-          mkdir -p ${{targets.subpkgdir}}/sbin
-          mv ${{targets.destdir}}/sbin/dm* ${{targets.subpkgdir}}/sbin
+          mkdir -p ${{targets.subpkgdir}}/usr/bin
+          mv ${{targets.destdir}}/usr/bin/dm* ${{targets.subpkgdir}}/usr/bin
     test:
       pipeline:
         - runs: |
