Adding patch files

--- a/spark-3.5.yaml
+++ b/spark-3.5.yaml
@@ -263,14 +263,14 @@ subpackages:
           mvn clean
       - uses: patch
         with:
-          patches: make-2.13-distribution.patch internal-access.patch mvn.patch
+          patches: make-2.13-distribution.patch internal-access.patch mvn.patch GHSA-8qv5-68g4-248j-fix.patch GHSA-4g8c-wm8x-jfhw-fix.patch
       - runs: |
           export JAVA_HOME="/usr/lib/jvm/${{range.value}}"
           export PATH=$PATH:$JAVA_HOME/bin
           ./dev/change-scala-version.sh 2.13
       - uses: maven/pombump
         with:
-          properties-file: pombump-properties.yaml
+          properties-file: pombump-properties-2.13.yaml
       - runs: |
           mkdir -p ${{targets.contextdir}}/usr/lib/spark/
           ./dev/make-distribution.sh --name pyspark-2.13 --pip --tgz -Pscala-2.13 -Phive -Phive-thriftserver -Pyarn
