nfs-utils - usrmerge-sbin

--- a/nfs-utils.yaml
+++ b/nfs-utils.yaml
@@ -57,6 +57,8 @@ pipeline:
   - uses: autoconf/make
 
   - uses: autoconf/make-install
+    with:
+      opts: sbindir=/usr/bin
 
   - uses: strip
 
