terraform-provider-aws: require go<1.24

--- a/terraform-provider-aws.yaml
+++ b/terraform-provider-aws.yaml
@@ -14,6 +14,11 @@ package:
       - terraform-compat
       - terraform-local-provider-config
 
+environment:
+  contents:
+    packages:
+      - go<1.24
+
 pipeline:
   - uses: git-checkout
     with:
