--- a/py3-supported-python.yaml
+++ b/py3-supported-python.yaml
@@ -34,6 +34,9 @@ subpackages:
         - python-3.11-base-dev
         - python-3.12-base-dev
         - python-3.13-base-dev
+    test:
+      pipeline:
+        - uses: test/emptypackage
 
   - range: py-versions
     name: py${{range.key}}-build-base
@@ -50,6 +53,9 @@ subpackages:
       provides:
         - py3-build-base
       provider-priority: ${{range.value}}
+    test:
+      pipeline:
+        - uses: test/emptypackage
 
   - name: py3-supported-build-base
     description: "metapackage for common python build-deps"
@@ -59,6 +65,9 @@ subpackages:
         - py3.11-build-base
         - py3.12-build-base
         - py3.13-build-base
+    test:
+      pipeline:
+        - uses: test/emptypackage
 
   - range: py-versions
     name: py${{range.key}}-build-base-dev
@@ -71,6 +80,9 @@ subpackages:
       provides:
         - py3-build-base-dev
       provider-priority: ${{range.value}}
+    test:
+      pipeline:
+        - uses: test/emptypackage
 
   - name: py3-supported-build-base-dev
     description: "metapackage for common python build-deps with C extensions"
@@ -82,7 +94,14 @@ subpackages:
         - py3.12-build-base-dev
         - py3.13-build-base-dev
         - py3-supported-python-dev
+    test:
+      pipeline:
+        - uses: test/emptypackage
 
 update:
   enabled: false
   exclude-reason: No source to watch for the new versions
+
+test:
+  pipeline:
+    - uses: test/emptypackage
