add curl as runtime dependency to cassandra
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/cassandra-5.0.yaml
+++ b/cassandra-5.0.yaml
@@ -1,12 +1,13 @@
 package:
   name: cassandra-5.0
   version: "5.0.3"
-  epoch: 0
+  epoch: 1
   description: Open Source NoSQL Database
   copyright:
     - license: Apache-2.0
   dependencies:
     runtime:
+      - curl
       - python-3.11 # needed for cqlsh
     provides:
       - cassandra=${{package.full-version}}
