Just pass the empty --packages and --replaces, let gobump figure it out.
gobump will hopefully just take this and make no disinction between
--packages="" and no '--packages' given.

--- a/pipelines/go/bump.yaml
+++ b/pipelines/go/bump.yaml
@@ -49,16 +49,12 @@ pipeline:
         go mod graph
       fi
 
-      # Packages and replaces are optional, so if not given, we don't pass them.
-      packagesString=""
-      if [ ! -z "${{inputs.deps}}" ]; then
-        packagesString="--packages ${{inputs.deps}}"
-      fi
-
-      replacesString=""
-      if [ ! -z "${{inputs.replaces}}" ]; then
-        replacesString="--replaces ${{inputs.replaces}}"
-      fi
-
       # We use the --tidy flag to run go mod tidy before and after in some cases (if old versions of go are used, we need to update the go.mod format)
-      gobump ${packagesString} ${replacesString} --tidy=${{inputs.tidy}} --skip-initial-tidy=${{inputs.skip-initial-tidy}} --show-diff=${{inputs.show-diff}} --go-version=${GO_VERSION} --compat=${{inputs.tidy-compat}}
+      gobump \
+        --packages="${{inputs.deps}}" \
+        --replaces="${{inputs.replaces}}" \
+        --tidy="${{inputs.tidy}}" \
+        --skip-initial-tidy="${{inputs.skip-initial-tidy}}" \
+        --show-diff="${{inputs.show-diff}}" \
+        --go-version="${GO_VERSION}" \
+        --compat="${{inputs.tidy-compat}}"
