--- a/openrc.yaml
+++ b/openrc.yaml
@@ -35,7 +35,7 @@ pipeline:
         --libdir=/usr/lib \
         --libexecdir=/lib \
         --bindir=/bin \
-        --sbindir=/sbin
+        --sbindir=/usr/bin
 
   - uses: meson/compile
 
