su-exec - usrmerge-sbin

--- a/su-exec.yaml
+++ b/su-exec.yaml
@@ -25,8 +25,8 @@ pipeline:
   - uses: autoconf/make
 
   - runs: |
-      mkdir -p ${{targets.destdir}}/sbin
-      install -D su-exec ${{targets.destdir}}/sbin
+      mkdir -p ${{targets.destdir}}/usr/bin
+      install -D su-exec ${{targets.destdir}}/usr/bin
 
   - uses: strip
 
