shadow - usrmerge-sbin

--- a/shadow.yaml
+++ b/shadow.yaml
@@ -50,7 +50,8 @@ pipeline:
         --with-yescrypt \
         --without-nscd \
         --without-group-name-max-length \
-        --with-fcaps
+        --with-fcaps \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
@@ -105,7 +106,7 @@ subpackages:
       - runs: |
           cd ${{targets.destdir}}
           for bin in ${{vars.login-utils}}; do
-            for dir in bin sbin usr/bin usr/sbin; do
+            for dir in bin usr/bin usr/sbin; do
               if [ -e $dir/$bin ] || [ -L $dir/$bin ]; then
                 mkdir -p ${{targets.subpkgdir}}/$dir
                 mv ${{targets.destdir}}/$dir/$bin ${{targets.subpkgdir}}/$dir/
