systemd - usrmerge-sbin

--- a/systemd.yaml
+++ b/systemd.yaml
@@ -393,14 +393,15 @@ subpackages:
         - agetty
     pipeline:
       - runs: |
-          mkdir -p ${{targets.subpkgdir}}/etc ${{targets.subpkgdir}}/sbin
-          ln -s ../usr/lib/systemd/systemd ${{targets.subpkgdir}}/sbin/init
+          mkdir -p ${{targets.subpkgdir}}/etc ${{targets.subpkgdir}}/usr/bin
+          ln -s ../lib/systemd/systemd ${{targets.subpkgdir}}/usr/bin/init
           ln -s ../run/systemd/resolve/stub-resolv.conf "${{targets.subpkgdir}}/etc/resolv.conf"
           echo "uninitialized" > "${{targets.subpkgdir}}/etc/machine-id"
     test:
       pipeline:
         - runs: |
-            [ -f /sbin/init -a -x /sbin/init ]
+            [ -f /usr/bin/init -a -x /usr/bin/init ]
+            # after usrmerge, /sbin/init should exist but before
             grep "uninitialized" /etc/machine-id
 
   - name: "systemd-default-network"
