utmps - usrmerge-sbin

--- a/utmps.yaml
+++ b/utmps.yaml
@@ -49,7 +49,7 @@ pipeline:
       install -D -m755 utmp-init.initd "${{targets.destdir}}"/etc/init.d/utmp-init
       install -D -m644 wtmpd.logrotate "${{targets.destdir}}"/etc/logrotate.d/wtmpd
       install -D -m644 btmpd.logrotate "${{targets.destdir}}"/etc/logrotate.d/btmpd
-      install -D -m755 setup-utmp "${{targets.destdir}}"/sbin/setup-utmp
+      install -D -m755 setup-utmp "${{targets.destdir}}"/usr/bin/setup-utmp
 
       mkdir -p "${{targets.destdir}}/usr/share/doc"
       cp -a "$builddir/doc" "${{targets.destdir}}/usr/share/doc/${{package.name}}"
