--- a/druid.yaml
+++ b/druid.yaml
@@ -5,6 +5,9 @@ package:
   description: Apache Druid is a high performance real-time analytics database.
   copyright:
     - license: Apache-2.0
+  resources:
+    cpu: 8
+    memory: 16Gi
   dependencies:
     runtime:
       - bash
