flyway: don't assume version when removing annotations jar

--- a/flyway.yaml
+++ b/flyway.yaml
@@ -123,7 +123,7 @@ pipeline:
         cp flyway-commandline/target/dependency/$dep-*.jar ${{targets.contextdir}}/usr/share/java/flyway/drivers/gcp
       done
       # Clean up some of the unneeded jars
-      rm ${{targets.contextdir}}/usr/share/java/flyway/drivers/gcp/annotations-2.25.26.jar
+      rm ${{targets.contextdir}}/usr/share/java/flyway/drivers/gcp/annotations-*.jar
       rm ${{targets.contextdir}}/usr/share/java/flyway/drivers/gcp/google-cloud-core-http-*.jar
       rm ${{targets.contextdir}}/usr/share/java/flyway/drivers/gcp/google-http-client-appengine-*.jar
       rm ${{targets.contextdir}}/usr/share/java/flyway/drivers/gcp/google-http-client-apache-*.jar
