py3-psutil: don't ship tests to avoid triggering mal failures

--- a/py3-psutil.yaml
+++ b/py3-psutil.yaml
@@ -49,6 +49,9 @@ subpackages:
       - uses: py/pip-build-install
         with:
           python: python${{range.key}}
+      - runs: |
+          # Don't ship the test code, as it triggers malware scan failures
+          rm -rf ${{targets.subpkgdir}}/usr/lib/python${{range.key}}/site-packages/psutil/tests
       - uses: strip
     test:
       pipeline:
