add openssl-dev at build-time
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/grafana-oncall.yaml
+++ b/grafana-oncall.yaml
@@ -30,6 +30,7 @@ environment:
       - libffi-dev
       - linux-headers
       - mariadb-connector-c-dev
+      - openssl-dev
       - pcre-dev
       - postgresql-dev
       - python-${{vars.py-version}}
