add required deps
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/py3-poetry.yaml
+++ b/py3-poetry.yaml
@@ -52,11 +52,13 @@ subpackages:
         - py${{range.key}}-cleo
         - py${{range.key}}-crashtest
         - py${{range.key}}-dulwich
+        - py${{range.key}}-findpython
         - py${{range.key}}-importlib-metadata
         - py${{range.key}}-installer
         - py${{range.key}}-jsonschema
         - py${{range.key}}-keyring
         - py${{range.key}}-packaging
+        - py${{range.key}}-pbs_installer
         - py${{range.key}}-pexpect
         - py${{range.key}}-pkginfo
         - py${{range.key}}-platformdirs
