--- a/keycloak/pombump-deps.yaml
+++ b/keycloak/pombump-deps.yaml
@@ -4,4 +4,4 @@ patches:
       version: 4.1.118.Final
     - groupId: io.netty
       artifactId: netty-common
-      version: 4.1.118
+      version: 4.1.118.Final
