Adding default-jvm

--- a/spark-3.5.yaml
+++ b/spark-3.5.yaml
@@ -111,13 +111,13 @@ subpackages:
         - name: Test ${{package.name}} with OpenJDK ${{range.key}}
           pipeline:
             - name: Check spark-shell --version
-            - runs: /usr/lib/spark/bin/spark-shell --version
+              runs: /usr/lib/spark/bin/spark-shell --version
             - name: Check spark-submit --version
-            - runs: /usr/lib/spark/bin/spark-submit --version
+              runs: /usr/lib/spark/bin/spark-submit --version
             - name: Check pyspark --version
-            - runs: /usr/lib/spark/bin/pyspark --version
+              runs: /usr/lib/spark/bin/pyspark --version
             - name: Check spark-sql --version
-            - runs: /usr/lib/spark/bin/spark-sql --version
+              runs: /usr/lib/spark/bin/spark-sql --version
             - name: Test entrypoint
               runs: timeout 10 /opt/entrypoint.sh /opt/spark/bin/spark-shell > spark_log.txt 2>&1 || [ $? -eq 143 ] && grep "Spark session available" spark_log.txt && exit_code=0 || exit_code=$? && echo $exit_code
             - name: Run a simple Scala test script
@@ -285,7 +285,7 @@ subpackages:
         environment:
           LANG: en_US.UTF-8
           SCALA_VERSION: 2.13
-          JAVA_HOME: /usr/lib/jvm/java-${{range.key}}-openjdk
+          JAVA_HOME: /usr/lib/jvm/default-jvm
           SPARK_LOCAL_IP: 127.0.0.1
           SPARK_LOCAL_HOSTNAME: localhost
           SPARK_HOME: /usr/lib/spark
