fix has no exported member 'fireEvent' issue
Signed-off-by: Batuhan Apaydin <batuhan.apaydin@chainguard.dev>

--- a/hubble-ui.yaml
+++ b/hubble-ui.yaml
@@ -44,6 +44,7 @@ pipeline:
       npm config set legacy-peer-deps true
       npm cache clean --force
       npm install
+      npm install --save-dev @testing-library/jest-dom @testing-library/react @testing-library/dom --legacy-peer-deps
       export NODE_ENV=production
       npm run build
 
