Fixing java home for spark

--- a/spark-3.5.yaml
+++ b/spark-3.5.yaml
@@ -34,7 +34,7 @@ environment:
   environment:
     LANG: en_US.UTF-8
     APACHE_MIRROR: "https://repo.maven.apache.org/maven2/org"
-    JAVA_HOME: "/usr/lib/jvm/java-17-openjdk"
+    JAVA_HOME: /usr/lib/jvm/java-1.8-openjdk
 
 pipeline:
   - uses: git-checkout
@@ -184,8 +184,11 @@ subpackages:
                 EOF
                 /usr/lib/spark/bin/spark-submit sparkr_test.R
 
-  - name: ${{package.name}}-compat
+  - name: ${{package.name}}-scala-2.12-compat
     description: "Compatibility package to place binaries in the location expected by upstream image"
+    dependencies:
+      provides:
+        - spark-compat=${{package.full-version}}
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/usr/bin
@@ -285,7 +288,7 @@ subpackages:
         environment:
           LANG: en_US.UTF-8
           SCALA_VERSION: 2.13
-          JAVA_HOME: /usr/lib/jvm/default-jvm
+          JAVA_HOME: /usr/lib/jvm/${{range.value}}
           SPARK_LOCAL_IP: 127.0.0.1
           SPARK_LOCAL_HOSTNAME: localhost
           SPARK_HOME: /usr/lib/spark
